Refactor build workflow to include release events and update packaging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 name: Build on release
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: created
 
 jobs:
   build:
@@ -24,12 +23,12 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
-          file: bin/Translator_x64.zip
-          asset_name: Translator_x64.zip
+          file: Community.PowerToys.Run.Plugin.JetbrainsProjects/bin/JetbrainsProjects_x64.zip
+          asset_name: JetbrainsProjects_x64.zip
 
       - name: Upload ARM64 To Release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
-          file: bin/Translator_ARM64.zip
-          asset_name: Translator_ARM64.zip
+          file: Community.PowerToys.Run.Plugin.JetbrainsProjects/bin/JetbrainsProjects_ARM64.zip
+          asset_name: JetbrainsProjects_ARM64.zip
