--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Build on release
 on:
-  release:
-    types: created
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -13,9 +14,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: go to the project folder
+        run: cd Community.PowerToys.Run.Plugin.JetbrainsProjects
+
       - name: Package
         run: |
-          cd Community.PowerToys.Run.Plugin.JetbrainsProjects
           dotnet pack -p:Platform=x64
           dotnet pack -p:Platform=ARM64
 
@@ -23,12 +26,12 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
-          file: Community.PowerToys.Run.Plugin.JetbrainsProjects/bin/JetbrainsProjects_x64.zip
+          file: bin/JetbrainsProjects_x64.zip
           asset_name: JetbrainsProjects_x64.zip
 
       - name: Upload ARM64 To Release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
-          file: Community.PowerToys.Run.Plugin.JetbrainsProjects/bin/JetbrainsProjects_ARM64.zip
+          file: bin/JetbrainsProjects_ARM64.zip
           asset_name: JetbrainsProjects_ARM64.zip
