--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: go to the project folder
-        run: cd Community.PowerToys.Run.Plugin.JetbrainsProjects
-        
+    
       - name: Extract version
-        id: get_version
         run: |
           $jsonContent = Get-Content -Path "Community.PowerToys.Run.Plugin.JetbrainsProjects\plugin.json" -Raw
           $jsonObject = $jsonContent | ConvertFrom-Json
@@ -30,37 +26,43 @@ jobs:
 
       - name: Package to zip
         run: |
+          cd Community.PowerToys.Run.Plugin.JetbrainsProjects
           dotnet pack -p:Platform=x64
           dotnet pack -p:Platform=ARM64
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: rename zips
+        run: |
+          $version = Get-Content $env:GITHUB_OUTPUT | Select-String -Pattern 'VERSION=(.*)' | ForEach-Object { $_.Matches.Groups[1].Value }
+          Rename-Item -Path Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_x64.zip -NewName "JetbrainsProjects-$version-x64.zip"
+          Rename-Item -Path Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_ARM64.zip -NewName "JetbrainsProjects-$version-arm64.zip"
+ 
+      - uses: ncipollo/release-action@v1
         with:
-          tag_name: v${{ github.env.VERSION }}
-          release_name: v${{ github.env.VERSION }}
-          draft: false
-          prerelease: false
+          tag: v${{ github.env.VERSION }}
+          makeLatest: true
+          allowUpdates: true
+          artifactErrorsFailBuild: true
+          artifacts: 'Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\*.zip'
+            
+            
       
       
-      - name: Upload Release Asset x64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_x64.zip
-          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-x64.zip
-          asset_content_type: application/zip
-
-      - name: Upload Release Asset ARM64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_ARM64.zip
-          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-arm64.zip
-          asset_content_type: application/zip
+#      - name: Upload Release Asset x64
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ github.event.release.upload_url }}
+#          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_x64.zip
+#          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-x64.zip
+#          asset_content_type: application/zip
+#
+#      - name: Upload Release Asset ARM64
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ github.event.release.upload_url }}
+#          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_ARM64.zip
+#          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-arm64.zip
+#          asset_content_type: application/zip
