--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,16 @@ jobs:
           cd Community.PowerToys.Run.Plugin.JetbrainsProjects
           Rename-Item -Path bin\JetbrainsProjects_x64.zip -NewName "JetbrainsProjects-${{ env.VERSION }}-x64.zip"
           Rename-Item -Path bin\JetbrainsProjects_ARM64.zip -NewName "JetbrainsProjects-${{ env.VERSION }}-arm64.zip"
+          
+      - name: create notes
+        run: |
+          cd Community.PowerToys.Run.Plugin.JetbrainsProjects
+          $version = "${{ env.VERSION }}"
+          $name = "JetbrainsProjects"
+          $projectUri = "https://github.com/eliasblume/powertoys-run-jetbrains-projects"
+          $result = "release.md"
+          ./create-release-notes.ps1 -version $version -name $name -projectUri $projectUri -result $result
+         
  
       - uses: ncipollo/release-action@v1
         with:
@@ -45,25 +55,3 @@ jobs:
           artifacts: 'Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\*.zip'
           artifactContentType: 'application/zip'
             
-            
-      
-      
-#      - name: Upload Release Asset x64
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ github.event.release.upload_url }}
-#          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_x64.zip
-#          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-x64.zip
-#          asset_content_type: application/zip
-#
-#      - name: Upload Release Asset ARM64
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ github.event.release.upload_url }}
-#          asset_path: Community.PowerToys.Run.Plugin.JetbrainsProjects\bin\JetbrainsProjects_ARM64.zip
-#          asset_name: JetbrainsProjects-${{ github.env.VERSION }}-arm64.zip
-#          asset_content_type: application/zip
